@@ -55,12 +55,36 @@ import java.util.zip.CRC32;
 public class SDS {
 
     //------------------------------------------------------------------------
+    // Globale variables
+    //------------------------------------------------------------------------
+
+    private static final String UTF_8 = "UTF-8";
+    private static final String SEPARATING_LINES = "-----------------------------------------------";
+    private static final String JSON_CHAR_ERROR = "Unexpected JSON character: ";
+
+    //------------------------------------------------------------------------
+    // Instance variables
+    //------------------------------------------------------------------------
+
+    private String server;
+    private String identity;
+    private String key;
+
+    private String command;
+    private String artifact;
+    private String filter;
+
+    private boolean debug;
+    private String timestamp =
+            DateTimeFormatter.ISO_LOCAL_DATE_TIME.format(LocalDateTime.now()).replaceAll("[^0-9]", "_");
+
+    //------------------------------------------------------------------------
     // Command Line Handling
     //------------------------------------------------------------------------
 
     public static void main(String[] args) {
         System.out.println("SDS - Software Distribution System");
-        System.out.println("-----------------------------------------------");
+        System.out.println(SEPARATING_LINES);
         SDS instance = parseCommandLineAndCreateInstance(args);
         instance.verifyParameters();
         instance.execute();
@@ -92,9 +116,6 @@ public class SDS {
         }
         if (iter.hasNext()) {
             result.applyParameter("artifact", iter.next());
-        }
-        if (iter.hasNext()) {
-            result.applyParameter("version", iter.next());
         }
 
         return result;
@@ -148,15 +169,15 @@ public class SDS {
 
     private String urlEncode(String value) {
         try {
-            return URLEncoder.encode(value, "UTF-8");
+            return URLEncoder.encode(value, UTF_8);
         } catch (UnsupportedEncodingException e) {
-            throw new IllegalArgumentException("UTF-8", e);
+            throw new IllegalArgumentException(UTF_8, e);
         }
     }
 
     private String hashMD5(String value) {
         try {
-            byte[] bytesOfMessage = value.getBytes("UTF-8");
+            byte[] bytesOfMessage = value.getBytes(UTF_8);
             MessageDigest md = MessageDigest.getInstance("MD5");
             byte[] digest = md.digest(bytesOfMessage);
             StringBuilder sb = new StringBuilder(digest.length * 2);
@@ -198,23 +219,6 @@ public class SDS {
     }
 
     //------------------------------------------------------------------------
-    // Instance variables
-    //------------------------------------------------------------------------
-
-    private String server;
-    private String identity;
-    private String key;
-
-    private String command;
-    private String artifact;
-    private String version;
-    private String filter;
-
-    private boolean debug;
-    private String timestamp =
-            DateTimeFormatter.ISO_LOCAL_DATE_TIME.format(LocalDateTime.now()).replaceAll("[^0-9]", "_");
-
-    //------------------------------------------------------------------------
     // Logging and error handling
     //------------------------------------------------------------------------
 
@@ -239,7 +243,7 @@ public class SDS {
         }
         System.err.println();
         System.err.println();
-        System.err.println("Usage: sds -server <name> -identity <identity> -key <key> COMMAND [ARTIFACT] [VERSION]");
+        System.err.println("Usage: sds -server <name> -identity <identity> -key <key> COMMAND [ARTIFACT]");
         System.err.println();
         System.err.println("You can omit the parameters if the appropriate environment variables "
                            + "(SDS_SERVER, SDS_IDENTITY, SDS_KEY) are filled.");
@@ -247,8 +251,7 @@ public class SDS {
         System.err.println("Commands");
         System.err.println("--------");
         System.err.println();
-        System.err.println("list   - Lists all versions of the given artifact, "
-                           + "or all known artifacts if no artifact name is given");
+        System.err.println("list   - Lists all known artifacts");
         System.err.println("pull   - Synchronizes the given artifact against the current directory.");
         System.err.println("         WARNING: This will delete all files in the current directory "
                            + "if they are not part of the artifact distribution.");
@@ -393,7 +396,7 @@ public class SDS {
             download(uri, buffer, debug);
 
             return parseJSON(new BufferedReader(new InputStreamReader(new ByteArrayInputStream(buffer.toByteArray()),
-                                                                      "UTF-8")));
+                                                                      UTF_8)));
         } catch (Throwable e) {
             verbose(e);
             fail("Cannot download '%s' as JSON", uri);
@@ -434,7 +437,7 @@ public class SDS {
                 return Long.valueOf(str);
             }
         } else {
-            throw new IllegalArgumentException("Unexpected JSON character: " + next);
+            throw new IllegalArgumentException(JSON_CHAR_ERROR + next);
         }
     }
 
@@ -450,9 +453,7 @@ public class SDS {
             int next = readFirstNonWhiteSpace(input);
             if (next != ',') {
                 if (next != ']') {
-                    throw new IllegalArgumentException("Unexpected JSON character: "
-                                                       + (char) next
-                                                       + ". Expected a ']'!");
+                    throw new IllegalArgumentException(JSON_CHAR_ERROR + (char) next + ". Expected a ']'!");
                 }
                 break;
             }
@@ -472,7 +473,7 @@ public class SDS {
             next = input.read();
         }
         if (next != '"') {
-            throw new IllegalArgumentException("Unexpected JSON character: " + (char) next + ". Expected a '\"'!");
+            throw new IllegalArgumentException(JSON_CHAR_ERROR + (char) next + ". Expected a '\"'!");
         }
         return result.toString();
     }
@@ -492,20 +493,18 @@ public class SDS {
         int next = readFirstNonWhiteSpace(input);
         while (next != '}') {
             if (next != '"') {
-                throw new IllegalArgumentException("Unexpected JSON character: " + (char) next + ". Expected a '\"'!");
+                throw new IllegalArgumentException(JSON_CHAR_ERROR + (char) next + ". Expected a '\"'!");
             }
             String key = parseString(input);
             next = readFirstNonWhiteSpace(input);
             if (next != ':') {
-                throw new IllegalArgumentException("Unexpected JSON character: " + (char) next + ". Expected a ':'!");
+                throw new IllegalArgumentException(JSON_CHAR_ERROR + (char) next + ". Expected a ':'!");
             }
             result.put(key, parseJSON(input));
             next = readFirstNonWhiteSpace(input);
             if (next != ',') {
                 if (next != '}') {
-                    throw new IllegalArgumentException("Unexpected JSON character: "
-                                                       + (char) next
-                                                       + ". Expected a '}'!");
+                    throw new IllegalArgumentException(JSON_CHAR_ERROR + (char) next + ". Expected a '}'!");
                 }
                 break;
             }
@@ -543,30 +542,8 @@ public class SDS {
     }
 
     public void list() {
-        if (empty(artifact)) {
-            listArtifacts();
-        } else {
-            listVersions();
-        }
-    }
-
-    private void listVersions() {
-        System.out.printf("Versions available for %s on: %s%n", artifact, server);
-        System.out.println("-----------------------------------------------");
-        System.out.println();
-        Object result = jsonCall("/artifacts/" + artifact);
-        if ((boolean) get(result, "error")) {
-            fail((String) get(result, "message"));
-        }
-
-        List<Object> versions = asArray(get(result, "versions"));
-        versions.forEach(o -> System.out.println(get(o, "name") + " (" + get(o, "date") + ", " + get(o, "size") + ")"));
-        System.out.println();
-    }
-
-    private void listArtifacts() {
         System.out.printf("Available artifacts on: %s%n", server);
-        System.out.println("-----------------------------------------------");
+        System.out.println(SEPARATING_LINES);
         System.out.println();
         Object result = jsonCall("/artifacts");
         if ((boolean) get(result, "error")) {
@@ -629,12 +606,9 @@ public class SDS {
         if (empty(artifact)) {
             fail("Please specify an artifact name!");
         }
-        if (empty(version)) {
-            version = "latest";
-        }
-        String baseURI = "/artifacts/" + artifact + "/" + version;
-        System.out.printf("Synchronizing: %s (%s) from %s%n", artifact, version, server);
-        System.out.println("-----------------------------------------------");
+        String baseURI = "/artifacts/" + artifact;
+        System.out.printf("Synchronizing: %s from %s%n", artifact, server);
+        System.out.println(SEPARATING_LINES);
         System.out.println();
         Object result = jsonCall(baseURI + "/_index");
         if ((boolean) get(result, "error")) {
@@ -675,25 +649,24 @@ public class SDS {
             }
         }
         scanUnexpected("", new File("."));
-        System.out.println("-----------------------------------------------");
+        System.out.println(SEPARATING_LINES);
         System.out.println(String.format("Files checked......%10s", filesChecked));
         System.out.println(String.format("Files added........%10s", filesAdded));
         System.out.println(String.format("Files changed......%10s", filesChanged));
         System.out.println(String.format("Files downloaded...%10s", filesDownloaded));
         System.out.println(String.format("Files removed......%10s", filesRemoved));
-        System.out.println("-----------------------------------------------");
+        System.out.println(SEPARATING_LINES);
         System.out.println();
     }
 
     private void addAllowedPath(String name) {
-        String uriPart = null;
+        StringBuilder uriPart = new StringBuilder();
         for (String part : name.split("/")) {
-            if (uriPart == null) {
-                uriPart = part;
-            } else {
-                uriPart += "/" + part;
+            if (uriPart.length() > 0) {
+                uriPart.append("/");
             }
-            allowedFiles.add(uriPart);
+            uriPart.append(part);
+            allowedFiles.add(uriPart.toString());
         }
     }
 
